			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04o: *********************************

IMP: (5/24/06, RK) Improvements to NCC GUI user manual

IMP/MAN: (5/24/06, GVG) List User Preferences in HelpMenu.

IMP/MAN: (5/23/06, GVG) Accelerators in ToolTip text of ToolBar buttons.

BUG: (5/23/06, SMR) Smooth zooming can crash (Bug #1054)
FIX: In ZoomAndPanListener.mouseDragged(), prevent negative scale.

BUG: (5/23/06, SMR) Mimic stitching doesn't show all cases when running interactively (Bug #1048).
FIX: In MimicStitch.MimicDialog, run new dialogs without redisplay.

BUG: (5/23/06, SMR) GDS Input ignores illegal export names (Bug #1044).
FIX: In Export.newInstance(), mangle illegal names before rejecting.

BUG: (5/23/06, DN) Electric doesn't display anything after the language assertion error (Bug #1054).
FIX: EditWindow.setScale throws IllegalArgumentException when scal is negative.
     RenderJob.doIt clears "runningNow" in finally block.

IMP: (5/23/06, GVG) Extra messages for Spice netlister export (Bug #1046, tail file appending).

BUG: (5/23/06, SMR) Waveform measurement doesn't display small numbers (Bug #1004).
FIX: In Panel.repaintOffscreenImage(), use convertToEngineeringNotation.

BUG: (5/23/06, GVG) Exception in Waveform viewer due to non-existing DC signals (Bug #1053)
FIX: Skip computeSmallestValues if no signals are found.

BUG: (5/23/06, DN) Null Pointer Exception in mimic unstitch (Bug #1047).
FIX: Check if end of deleted arc killed too.

BUG: (06/21/06, GVG) No calling of TechPref.sideEffect while reading cacheObj values from XML (Bug #1043).
Noticed by loading XMl for TSMC.
FIX: cacheObj must be changed by calling Pref.setDouble/setInt/setString functions.

************************* Version 8.04m-8.04n: *********************************

BUG: (5/19/06, DN) Invariant "Names are unique" is not always true.